[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lambdaguard"
version = "0.1.0"
description = "Overfitting detection for Gradient Boosting models using λ-Guard methodology."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name="Fabrizio Di Sciorio, PhD", email="fabriziodisciorio91@gmail.com"}
]
keywords = ["machine-learning", "gradient-boosting", "overfitting", "boosting", "lambda-guard"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "matplotlib>=3.8",
    "seaborn>=0.12",
    "xgboost>=1.7",
    "lightgbm>=4.4",
    "catboost>=1.1"
]

[project.urls]
Homepage = "https://github.com/faberBI/lambdaguard"
Documentation = "https://github.com/faberBI/lambdaguard"
BugTracker = "https://github.com/faberBI/lambdaguard/issues"

[tool.setuptools.packages.find]
where = ["lambdaguard"]
exclude = ["notebooks*", "tests*", "docs*"]
